--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/library
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.driverclassname=com.mysql.cj.jdbc.Driver
+
+logging.level.org.springframework.security = warn
